objects/Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Affecte_moi__c</fullName>
        <formula>affectation__c ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affecté à moi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exigence__c</fullName>
        <label>Exigence</label>
        <referenceTo>Exigence__c</referenceTo>
        <relationshipLabel>Configuration</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <inlineHelpText>Ok: fait dans l&apos;environnement principam
Terminé: Data dic mis à jour ainsi que tous les environnements concernés</inlineHelpText>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A réaliser</fullName>
                    <default>true</default>
                    <label>A réaliser</label>
                </value>
                <value>
                    <fullName>En cours de réalsation</fullName>
                </value>
                <value>
                    <fullName>A valider</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
                <value>
                    <fullName>Abandonné</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <label>Titre</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Config simple: Champs, page layouts, record types, objets...
Config avancée: Workflows, Validation rules, boutons url...</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Config simple</fullName>
                </value>
                <value>
                    <fullName>Config avancée</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>affectation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affecté à</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>updateDataDic__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mettre à jour le dictionnaire de données</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updateSpec__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mettre à jour les spécifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updateTestMethod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mettre à jour les TEST METHOD</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>